<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  
	<groupId>io.exonym</groupId>
	<artifactId>libexonymwallet</artifactId>
	<version>0.2</version>
	<packaging>jar</packaging>
	<name>libexonymwallet</name>
	<description>Wallet API for Command Line and Device</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<abc4TrustVersion>1.1.36</abc4TrustVersion>
		<idmxVersion>3.1.4</idmxVersion>
		<skipTests>true</skipTests>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<graalvmHome>${env.JAVA_HOME}</graalvmHome>
		<gluonfx.maven.plugin.version>1.0.18</gluonfx.maven.plugin.version>
		<gluonfx.target>host</gluonfx.target>
		<main.class>io.exonym.lib.wallet.WalletAPI</main.class>

		<javafx.version>${java.version}</javafx.version>
		<charm.version>6.2.2</charm.version>
		<charm.cloudlink.version>6.0.7</charm.cloudlink.version>
		<glisten.afterburner.version>2.1.0</glisten.afterburner.version>
		<attach.version>4.0.16</attach.version>
		<connect.version>2.0.1</connect.version>
		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>

	</properties>

<!--	<distributionManagement>-->
<!--		<repository>-->
<!--		<id>internal</id>-->
<!--		<url>https://repo.exonym.io/repository/internal/</url>-->
<!--		</repository>-->
<!--	</distributionManagement>-->

	<dependencies>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.55</version>
		</dependency>

		<dependency>
			<groupId>org.graalvm.nativeimage</groupId>
			<artifactId>svm</artifactId>
			<version>22.0.0.2</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.graalvm.truffle</groupId>
					<artifactId>truffle-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.4</version>
		    <scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.ibm.zurich.idmx</groupId>
			<artifactId>com.ibm.zurich.idmx.interfaces</artifactId>
			<version>${idmxVersion}</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.paho</groupId>
			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
			<version>1.2.5</version>
		</dependency>

		<dependency>
			<groupId>com.ibm.zurich.idmx</groupId>
			<artifactId>com.ibm.zurich.idmx.3_x_x</artifactId>
			<version>${idmxVersion}</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.google.dagger</groupId>
			<artifactId>dagger</artifactId>
			<version>2.44.2</version>
		</dependency>

		<!-- JAXB Core -->
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.3.0.1</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.activation</groupId>
					<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>

		</dependency>

		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.3</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun.activation</groupId>
					<artifactId>jakarta.activation</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.activation</groupId>
					<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>

		</dependency>

		<dependency>
			<groupId>org.apache.santuario</groupId>
			<artifactId>xmlsec</artifactId>
			<version>4.0.2</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-jaxb-annotations</artifactId>
			<version>2.14.1</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.activation</groupId>
					<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.3.0</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.3.0</version>
		</dependency>

	</dependencies>
  <build>
   	<plugins>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<dependencies>
				<dependency>
					<groupId>com.google.dagger</groupId>
					<artifactId>dagger-compiler</artifactId>
					<version>2.44.2</version>
					<!--					<optional>true</optional>-->
				</dependency>
			</dependencies>
			<version>3.8.1</version>
			<configuration>
				<fork>true</fork>
				<release>${java.version}</release>
				<compilerArgs>
					<arg>--add-opens</arg>
					<arg>java.base/java.lang=ALL-UNNAMED</arg>
					<arg>--add-opens</arg>
					<arg>java.base/java.util=ALL-UNNAMED</arg>
				</compilerArgs>
			</configuration>
		</plugin>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-assembly-plugin</artifactId>
			<version>3.4.2</version>
			<configuration>
				<descriptorRefs>
					<descriptorRef>jar-with-dependencies</descriptorRef>
				</descriptorRefs>
			</configuration>
			<executions>
				<execution>
					<id>assemble-all</id>
					<phase>package</phase>
					<goals>
						<goal>single</goal>
					</goals>
				</execution>
			</executions>
		</plugin>

		<plugin>
			<groupId>com.gluonhq</groupId>
			<artifactId>gluonfx-maven-plugin</artifactId>
			<version>${gluonfx.maven.plugin.version}</version>
			<configuration>
				<target>${gluonfx.target}</target>
				<mainClass>${main.class}</mainClass>
				<graalvmHome>${graalvmHome}</graalvmHome>
<!--				/Library/Java/JavaVirtualMachines/graalvm-svm-java17-darwin-m1-gluon-22.1.0.1-Final/Contents/Home-->
				<nativeImageArgs>
					<arg>-H:-CheckToolchain</arg>
					<arg>--enable-url-protocols=https</arg>
					<!-- Optimization Flags -->
					<arg>--no-fallback</arg>
					<arg>-O5</arg>
					<arg>-H:+RemoveUnusedSymbols</arg>
					<arg>--gc=serial</arg>
<!--					<arg>&#45;&#45;initialize-at-build-time=java.util.logging.LogManager</arg>-->
<!--					<arg>&#45;&#45;trace-class-initialization=java.util.logging.LogManager</arg>-->
				</nativeImageArgs>
			</configuration>
		</plugin>

	</plugins>
   <resources>
	 <resource>
	   <directory>resource/</directory>
	 </resource>
   </resources>
</build>
	<profiles>
		<profile>
			<id>ios</id>
			<properties>
				<gluonfx.target>ios</gluonfx.target>
			</properties>
		</profile>
		<profile>
			<id>android</id>
			<properties>
				<gluonfx.target>android</gluonfx.target>
			</properties>
		</profile>

		<!-- Default Profile (Fat Jar) -->
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.4.2</version>
						<configuration>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
						<executions>
							<execution>
								<id>assemble-all</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Unity-specific Profile (No Native Components) -->
		<profile>
			<id>unity</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<!-- Set Java version -->
				<maven.compiler.source>11</maven.compiler.source>
				<maven.compiler.target>11</maven.compiler.target>
				<maven.compiler.release>11</maven.compiler.release>
			</properties>
			<dependencies>
				<dependency>
					<groupId>com.google.zxing</groupId>
					<artifactId>core</artifactId>
					<version>3.3.0</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>com.google.zxing</groupId>
					<artifactId>javase</artifactId>
					<version>3.3.0</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.graalvm.nativeimage</groupId>
					<artifactId>svm</artifactId>
					<version>22.0.0.2</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>com.jcraft</groupId>
					<artifactId>jsch</artifactId>
					<version>0.1.55</version>
					<scope>provided</scope>
				</dependency>


			</dependencies>
			<build>
				<resources>
					<resource>
						<directory>resource</directory>
						<includes>
							<include>lambda.xml</include>
							<include>issuer-for-verifier-params.xml</include>
						</includes>
					</resource>
				</resources>
				<plugins>
					<!-- Compiler plugin to ensure Java 11+ support -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.10.1</version>
						<configuration>
							<source>11</source>
							<target>11</target>
						</configuration>
					</plugin>
					<!-- Assembly plugin for JAR-with-dependencies -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.4.2</version>
						<configuration>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<archive>
								<manifest>
									<addClasspath>true</addClasspath>
									<mainClass>com.example.Main</mainClass>
								</manifest>
								<manifestEntries>
									<Class-Path>resources/</Class-Path>
								</manifestEntries>
							</archive>
						</configuration>
						<executions>
							<execution>
								<id>assemble-unity</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

<!--	<repositories>-->
<!--		<repository>-->
<!--			<id>internal</id>-->
<!--			<name>Archiva Managed Internal Repository</name>-->
<!--			<url>https://repo.exonym.io/repository/internal/</url>-->
<!--			<releases>-->
<!--				<enabled>true</enabled>-->
<!--			</releases>-->
<!--			<snapshots>-->
<!--				<enabled>false</enabled>-->
<!--			</snapshots>-->
<!--		</repository>-->
<!--	</repositories>-->
<!--	<pluginRepositories>-->
<!--		<pluginRepository>-->
<!--			<id>internal</id>-->
<!--			<name>Archiva Managed Internal Repository</name>-->
<!--			<url>https://repo.exonym.io/repository/internal/</url>-->
<!--			<releases>-->
<!--				<enabled>true</enabled>-->
<!--			</releases>-->
<!--			<snapshots>-->
<!--				<enabled>false</enabled>-->
<!--			</snapshots>-->
<!--		</pluginRepository>-->
<!--	</pluginRepositories>-->

</project>
